# cool_survival_game

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: connecting_screen.rs  main.rs  main_game.rs  main_menu.rs
client/src/main_game/: orc.rs  player.rs  slave_player.rs
server/: Cargo.toml
server/src/: components.rs  main.rs  orc.rs  player.rs
shared/: Cargo.toml
shared/src/: lib.rs
