[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "^0.9"
bevy_renet = "0.0.6"
iyes_loopless = { version = "^0.9", default-features = false }
shared = { path = "../shared" }
